--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ loader_version_range=[2,)
 
 mod_id=carpetvariants
 mod_name=Carpet Variants
-mod_license=All Rights Reserved
+mod_license=MIT
 mod_version=1.20.6-1.0.0
 mod_group_id=com.ludwici.carpetvariants
 mod_authors=ludwici
