--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,26 @@
+# Done to increase the memory available to Gradle.
 org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
-org.gradle.debug=false
 
-neogradle.subsystems.parchment.minecraftVersion=1.20.6
-neogradle.subsystems.parchment.mappingsVersion=2024.06.02
-minecraft_version=1.20.6
-minecraft_version_range=[1.20.6,1.21)
-neo_version=20.6.112-beta
-neo_version_range=[20.6,)
-loader_version_range=[2,)
-
-mod_id=carpetvariants
-mod_name=Carpet Variants
+# Mod properties
+mod_version = 1.0.2
+maven_group = com.ludwici
+mod_id = carpetvariants
 mod_license=MIT
-mod_version=1.20.6-1.0.1
-mod_group_id=com.ludwici.carpetvariants
 mod_authors=ludwici
-mod_description=A mod that gives you the ability to place carpets on walls and ceilings.
+description=A mod that gives you the ability to place carpets on walls and ceilings.
+mod_name=Carpet Variants
+mod_url=https://github.com/ludwici/CarpetVariants
+#enabled_platforms = fabric,neoforge
+
+# Minecraft properties
+java_version=21
+minecraft_version = 1.20.6
+minecraft_version_range=[1.20.6,1.21)
+
+# Dependencies
+#architectury_api_version = 12.1.3
+fabric_loader_version = 0.15.11
+fabric_version = 0.100.0+1.20.6
+neo_version = 20.6.113-beta
+neo_version_range=[20.6,)
+neo_loader_version_range=[2,)
